# ChessBot

./: CMakeLists.txt  CMakePresets.json
ChessBot/include/: chess.h
ChessBot/src/: chess.cpp  main.cpp  resource.h  resources.rc
ChessBot/src/chess/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
